bug with modal view on mobile due to http vs https
start implementing alternative file display in new tab using button

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,10 +32,10 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 900;
   letter-spacing: -0.9px;
-  line-height: 44px;
+  line-height: 2.75rem;
   text-size-adjust: 100%;
   font-feature-settings: "kern";
-  font-size: 36px;
+  font-size: 2.25rem;
   color: rgb(24, 99, 229);
 }
 
@@ -54,10 +54,10 @@
   position: absolute;
   left: 10%;
   right: 10%;
-  top: 10%;
+  top: 15%;
 
   height: 55%;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
 .bg{
@@ -69,6 +69,10 @@
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(15px);
+}
+
+.hidden {
+  display: none;
 }
 
 .pageFooter {
